2011-02-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Peephole improvements from the optralloc branch.
	* src/z80/gen.c:
	  Some cleanups from optralloc branch.

2011-02-02 Borut Razem <borut.razem AT siol.net>

	* sdas/linksrc/Makefile.in:
	  fixed bug #3170674: Incorrect file ownerships after make install

2011-01-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (mova): added early optimization,
	  (getFreePtr): simplified aopp to aop,	
	  (aopPtrForSym): factored out of aopForSym,
	  (freeAsmop,freeForBranchAsmop): fixed bug 3130806 for AOP_STK
	* src/mcs51/gen.h (asmop): replaced aop_stk with aop_sym
	* support/regression/tests/bug3130806.c: new, added

2011-01-25 Borut Razem <borut.razem AT siol.net>

	* src/SDCCsysytem.c: removed MSCV 2010 warnings

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Make argument to validateOpType non-const.

2011-01-17 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: fixed bug introduced by me 2011-01-16
	* support/Util/dbuf.c, support/Util/dbuf.h, src/SDCCsystem.c:
	  dbuf_detach_c_str() returns char *, for compatiblity with
	  dbuf_detach()
	* configure.in, configure: fixed Solaris SunPro C compiler errors:
	  #error: "Use of <stdbool.h> is valid only in a c99 compilation environment."
	  by adding -xc99 option to CFLAGS and MAKEDEP

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* SDCClrange.h,
	  SDCClrange.c:
	  Comment on the effects of dead code on live ranges.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Make argument to validateOpType const.

2011-01-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Two new peephole rules, optimizing code frequently generated by the new allocator.

2011-01-16 Borut Razem <borut.razem AT siol.net>

	* support/regression/collate-results.py: count invalid instructions